<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LinkBot</string>
    <string name="register">register</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email_address">enter email address</string>
    <string name="link_bot">LINK BOT</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="add_a_category">Add a category</string>
    <string name="add_new_category">Add New Category</string>
    <string name="new_category_message">Select a name for a new category of links.</string>
    <string name="home">Home</string>
    <string name="main_menu_for_additional_options">Main menu for additional options</string>
    <string name="link_detail">Link Detail</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_message">This will delete the category selected and all of the associated links it contains. Do you wish to continue?</string>
    <string name="delete_category_forever_message">This will delete the selected category and all of the links it contains.
        This action is PERMANENT and absolutely cannot be undone. Do you wish to proceed?</string>
    <string name="DELETE">DELETE</string>
    <string name="CANCEL" tools:ignore="ButtonCase">CANCEL</string>
    <string name="don_t_ask_again">Don\'t ask again.</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>

    <string name="suggest">Make sure all words are spelled correctly. Try different keywords. You may not have any records saved with this keyword.</string>
    <string name="search_links">Search Links...</string>
</resources>