<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        android:alpha="0.5"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/circle"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/circle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/link_bot"
        android:textColor="@color/dark_blue"
        android:textSize="62sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:id="@+id/etEmail"
            android:background="@drawable/form_input"
            android:padding="20dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:layout_below="@id/etEmail"
            android:background="@drawable/form_input"
            android:padding="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:tag="login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassword"
            android:layout_below="@id/btnLogin"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="22sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:tag="password"
            android:text="@string/forgot_password"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transitRegister"
            android:layout_below="@id/forgotPassword"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:tag="register"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:text="@string/create_a_new_account"/>

    </RelativeLayout>

</RelativeLayout>