<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        android:alpha="0.5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topBar"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="-100dp"
            android:background="@drawable/circle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/link_bot"
            android:textColor="@color/dark_blue"
            android:textSize="54sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:id="@+id/etEmail"
            android:background="@drawable/form_input"
            android:padding="20dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:layout_below="@id/etEmail"
            android:background="@drawable/form_input"
            android:padding="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_password"
            android:id="@+id/etConfirmPassword"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:layout_below="@id/etPassword"
            android:background="@drawable/form_input"
            android:padding="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:layout_below="@id/etConfirmPassword"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="10dp"/>

    </RelativeLayout>

</RelativeLayout>